change name and more patches

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -60,6 +60,7 @@ COPY . .
 RUN npm run build
 
 # Run post-install scripts and optimize Laravel
+RUN composer update
 RUN composer dump-autoload --optimize && \
     php artisan optimize && \
     php artisan filament:optimize && \
