--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
         build:
             context: .
             dockerfile: ./docker/php/Dockerfile
-        container_name: mis_finanzas_app
+        container_name: sgfinanzas_app
         restart: unless-stopped
         volumes:
             - .:/var/www/html
@@ -29,7 +29,7 @@ services:
             
     nginx:
         image: nginx:stable-alpine
-        container_name: mis_finanzas_nginx
+        container_name: sgfinanzas_nginx
         restart: unless-stopped
         ports:
             - "${APP_PORT:-8000}:80"
@@ -43,7 +43,7 @@ services:
     redis:
         image: 'redis:alpine'
         ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
+            - '${FORWARD_REDIS_PORT:-6378}:6379'
         volumes:
             - 'sail-redis:/data'
         networks:
