--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,6 +6,11 @@ server {
     index index.php;
 
     charset utf-8;
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
 
     # Compresión gzip para mejorar el rendimiento
     gzip on;
